Fix button alignment on toolbars

--- a/app/assets/stylesheets/layout/_toolbar.sass
+++ b/app/assets/stylesheets/layout/_toolbar.sass
@@ -67,7 +67,8 @@
   display: table
 
 .toolbar-items
-  > li,
+  > li
+  .toolbar-item,
   .toolbar-button-group > li
     float: left
     &.toolbar-item
